kubernetes/applicativo/spring-boot-rest-jpa.yaml

# deployment del servizio spring-boot-rest-jpa con riferimento a configMap e secret

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-rest-jpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-rest-jpa
  template:
    metadata:
      labels:
        app: spring-boot-rest-jpa
    spec:
      containers:
        - name: spring-boot-rest-jpa
          image: mircocennamo82/my-repo:spring-boot-rest-jpa
          ports:
            - containerPort: 8081
---

# necessario per l bilanciamento del carico e per l'accesso al servizio all'interno del cluster

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-jpa
spec:
  selector:
    app: spring-boot-rest-jpa
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP

---
# necessario per accesso esterno al cluster spring-boot-rest-jpa.example.com è mappato nel file host

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-rest-jpa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: spring-boot-rest-jpa.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-rest-jpa
                port:
                  number: 8081
